# django-auth-adfs

./: .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  Vagrantfile  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: codecov.yml  publish_to_pypi.yml  testing.yml
demo/adfs/: manage.py
demo/adfs/mysite/: settings.py  urls.py
demo/adfs/polls/: admin.py  models.py  urls.py  views.py
demo/adfs/polls/api/: filters.py  serializers.py  urls.py  views.py
demo/adfs/polls/migrations/: 0001_initial.py
demo/adfs/templates/: base.html
demo/formsbased/mysite/: settings.py  urls.py  wsgi.py
demo/formsbased/polls/: admin.py  models.py  views.py
demo/formsbased/polls/api/: filters.py  serializers.py  views.py
demo/formsbased/polls/migrations/: 0001_initial.py
demo/formsbased/templates/: base.html  home.html
demo/formsbased/templates/registration/: login.html
django_auth_adfs/: __init__.py  adfs.py  backend.py  config.py  context_processors.py  drf-urls.py  drf_urls.py  exceptions.py  middleware.py  rest_framework.py  rest_urls.py  signals.py  token_manager.py  urls.py  util.py  utils.py  views.py
django_auth_adfs/rest_framework/: __init__.py  views.py
django_auth_adfs/templates/django_auth_adfs/: login_failed.html
docs/: Makefile  adfs_3.0_config_guide.rst  adfs_4.0_config_guide.rst  adfs_config_guide.rst  adfs_oauth.rst  azure_ad_config_guide.rst  conf.py  config_guides.rst  configuration.rst  demo.rst  extras.rst  faq.rst  index.rst  install.rst  make.bat  middleware.rst  oauth2_explained.rst  requirements.rst  rest_framework.rst  settings_ref.rst  signals.rst  token_lifecycle.rst  troubleshooting.rst
example/adfs/mysite/: settings.py  urls.py
example/adfs/templates/: base.html
example/formsbased/mysite/: urls.py
example/formsbased/polls/: urls.py
example/formsbased/polls/migrations/: 0001_initial.py
example/formsbased/polls/templates/polls/: detail.html  index.html  vote.html
example/formsbased/templates/: base.html
tests/: FederationMetadata_empty.xml  FederationMetadata_valid_cert_first.xml  FederationMetadata_valid_cert_second.xml  adfs.example.com.crt  adfs.example.com.key  custom_config.py  models.py  rest_urls.py  settings.py  test_adfs_responses.py  test_authentication.py  test_claims.py  test_client_request.py  test_configuration.py  test_drf_integration.py  test_keys.py  test_middleware.py  test_settings.py  tests.py  urls.py  utils.py  views.py
tests/mock_files/: FederationMetadata.xml  adfs-openid-configuration.json  azure-openid-configuration-v2.json  azure-openid-configuration.json
tests/templates/context_processor/: context_processor.html
vagrant/: 01-setup-domain.ps1  02-setup-adfs.ps1  02-setup-vagrant-user.ps1  03-example-adfs-config.ps1  03-setup-adfs.ps1  04-example-adfs-config.ps1  New-SelfSignedCertificateEx.ps1  README.rst
