[tool.poetry]
name = 'django-auth-adfs'
version = "1.15.0"  # Remember to also change __init__.py version
description = 'A Django authentication backend for Microsoft ADFS and AzureAD'
authors = ['Joris Beckers <joris.beckers@gmail.com>']
maintainers = ['Jonas Krüger Svensson <jonas-ks@hotmail.com>', 'Sondre Lillebø Gundersen <sondrelg@live.no>']
license = 'BSD-1-Clause'
homepage = 'https://github.com/snok/django-auth-adfs'
repository = 'https://github.com/snok/django-auth-adfs'
documentation = 'https://django-auth-adfs.readthedocs.io/en/latest'
keywords = ['django', 'authentication', 'adfs', 'azure', 'ad', 'oauth2']
readme = 'README.rst'
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django :: 4.2',
    'Framework :: Django :: 5.0',
    'Framework :: Django :: 5.1',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Internet :: WWW/HTTP :: WSGI',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Development Status :: 5 - Production/Stable',
]

[tool.poetry.dependencies]
python = '^3.9'
django = [
    { version = '^4.2', python = '>=3.9 <3.10' },
    { version = '^4.2 || ^5', python = '>=3.10' },
]
requests = '*'
urllib3 = '*'
cryptography = '*'
PyJWT = "*"

[tool.poetry.dev-dependencies]
responses = '*'
mock = '*'
coverage = '*'
djangorestframework = '*'
django-filter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
